src/github.com/ebay/akutan/query/parser/testdata/insert/errors/bad_predicate_var.res
parser: unexpected type *parser.Variable as predicate of fact 2